# TemStream

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  test.c
TemLang/: client.tem  clientUi.tem  data.tem  general.tem  guid.tem  resource.tem  ui.tem
compute_shaders/: rgba_to_uv.glsl  rgba_to_y.glsl  rgba_to_yuv.glsl
include/: TemStreamConfig.h  TemStreamConfig.h.in  access.hpp  address.hpp  addrinfo.hpp  allocator.hpp  allocator_defs.hpp  audio.hpp  audioSource.hpp  badWords.hpp  base64.hpp  byteList.hpp  circular_queue.h  client.h  clientConfiguration.hpp  clientConnection.hpp  clientPeer.hpp  colors.hpp  concurrentMap.hpp  concurrentQueue.hpp  concurrent_queue.hpp  connection.hpp  fixedSizeList.hpp  gui.hpp  guid.hpp  imguiName.hpp  imgui_serialize.hpp  logger.hpp  main.h  main.hpp  memoryStream.hpp  message.hpp  messageSource.hpp  message_source.hpp  open264.h  openH264.hpp  peer.hpp  peerInformation.hpp  producer.hpp  query.hpp  (+17 more)
json/: example_links.json
kernel/: image_conversions.cl  rgba_to_yuv.cl
src/: access.cpp  addrinfo.cpp  audio.c  audio.cpp  audioPulse.cpp  audioSource.cpp  audioWASAPI.cpp  audio_pulse.c  base64.c  base64.cpp  byteList.cpp  chat.c  circular_queue.c  client.c  clientConfiguration.cpp  clientConnection.cpp  clientMisc.cpp  clientPeer.cpp  colors.cpp  connection.cpp  consumer.c  decode.c  gui.cpp  guid.cpp  image.c  lobby.c  logger.cpp  main.c  main.cpp  memoryStream.cpp  misc.c  misc.cpp  networking.c  openH264.cpp  openh264.c  openh264.cpp  peer.cpp  producer.c  producer.cpp  pulse_audio.c  (+27 more)
src/fonts/: Cousine.cpp  Karla.cpp  NotoEmoji.cpp  ProggyClean.cpp  ProggyTiny.cpp  Roboto.cpp  Ubuntuu.cpp
tests/: authTest.cpp  chatSender.c  chatTester.cpp  chatTester.hpp
